--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -2,32 +2,46 @@
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+
             <div class="row g-3">
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Title</label>
-                    <input name=" courseTitle" [(ngModel)]="courseTitle" type="text" class="form-control">
+
+                    <label for="" class="form-label">courseTitle</label>
+                    <input name="coursetitle"[(ngModel)]="coursetitle" type="text" class="form-control">
+
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+
+                    <label for="" class="form-label">courseVenue</label>
+                    <input name="venue"[(ngModel)]="venue" type="text" class="form-control">
+
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <label for="" class="form-label">Desciption</label>
-                    <textarea name="courseDescription"[(ngModel)]="courseDescription"   id="" cols="30" rows="10" class="form-control"></textarea>
+
+                    <label for="" class="form-label">courseDescription</label>
+                    <textarea name="description"[(ngModel)]="description" id="" cols="30" rows="3" class="form-control"></textarea>
+
+                </div>
+                
+                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+
+                    <label for="" class="form-label">courseDuration</label>
+                    <input name="duration"[(ngModel)]="duration" type="text" class="form-control">
+
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Date</label>
-                    <input name="courseDate" [(ngModel)]="courseDate" type="date" class="form-control">
-                </div>
-                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Duration</label>
-                    <input name="courseDuration" [(ngModel)]="courseDuration" type="text" class="form-control">
-                </div>
-                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <label for="" class="form-label">Venue</label>
-                    <input name="courseVenue" [(ngModel)]="courseVenue" type="text" class="form-control">
+
+                    <label for="" class="form-label">courseDate</label>
+                    <input name="date"[(ngModel)]="date" type="date" name="" id="" class="form-control">
+
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <button (click)=" readValues()" class="btn btn-success">ADD COURSE</button>
+
+                    <button (click)="readValue()" class="btn btn-primary">Submit</button>
+
                 </div>
             </div>
+
         </div>
     </div>
 </div>
-
