--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,22 +12,25 @@
     </div>
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" >
-            <table class="table">
+            <table class="table" *ngFor="let i of searchCourse">
                 <thead>
                     <tr>
-                        <th scope="col">Employeecode</th>
-                        <th scope="col"> Name</th>
-                        <th scope="col">Designation</th>
-                        <th scope="col">Salary</th>
-                        <th scope="col">Company</th>
-                        <th scope="col">Email</th>
+                        <th scope="col">Course Title</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Duration</th>
+                        <th scope="col">Venue</th>
+                        <th scope="col">Date</th>
+                        
                         
                         
                       </tr>
                 </thead>
+             
                 
                 <tbody>
-                  <tr *ngFor="let i of searchCourse">
+                  <tr >
+                   
+                    
                     <td>{{i.coursetitle}}</td>
                     <td>{{i.description}}</td>
                     <td>{{i.duration}}</td>
